# YDBTermrec

./: README.md
termrec-c/: CMakeLists.txt  README.md  extract_string.c  parse_args.c  termrec.c  termrec.h
termrec-rs/: Cargo.toml  README.md
termrec-rs/src/: main.rs
